Add multiple response strategies feature and release v1.69.0